<?xml version="1.0" encoding="UTF-8"?>
<!--

    Sliceworkz Eventstore - a Java/Postgres DCB Eventstore implementation
    Copyright © 2025 Sliceworkz / XTi (info@sliceworkz.org)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.sliceworkz</groupId>
	<artifactId>sliceworkz-eventstore</artifactId>
	<version>0.5.1</version>
	
	<name>${project.artifactId}</name>
	<description>DCB (Dynamic Consistency Boundary) compliant EventStore (Java/Postgres)</description>
	<url>https://sliceworkz.github.io/eventstore</url>
	
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<maven.minimal-version>3.6.3</maven.minimal-version>
		
		<maven.maven-pgp-plugin.version>3.2.8</maven.maven-pgp-plugin.version>
		<maven.maven-versions-plugin.version>2.20.1</maven.maven-versions-plugin.version>
		<maven.maven-enforcer-plugin.version>3.6.2</maven.maven-enforcer-plugin.version>
		<maven.mycila-license-plugin.version>5.0.0</maven.mycila-license-plugin.version>
		<maven.maven-central-publishing-plugin.version>0.9.0</maven.maven-central-publishing-plugin.version>
		
		<maven.compiler.release>21</maven.compiler.release>
	</properties>
	
	<modules>
		<!-- maven build constructs -->
		<module>sliceworkz-eventstore-parent-pom</module>
		<module>sliceworkz-eventstore-bom</module>
		
		<!-- project modules -->
		<module>sliceworkz-eventstore-api</module>
		<module>sliceworkz-eventstore-impl</module>

		<!-- examples -->
		<module>sliceworkz-eventstore-examples</module>

		<!-- tests, those same scenarios will be run inmem as wel as on postgres  -->
		<module>sliceworkz-eventstore-tests</module>
		
		<!-- infra implementations -->
		<module>sliceworkz-eventstore-infra-inmem</module>
		<module>sliceworkz-eventstore-infra-postgres</module>

		<!-- benchmark tool -->
		<module>sliceworkz-eventstore-benchmark</module>
	</modules>
	
	<build>
		<plugins>
			<plugin>
			    <groupId>org.codehaus.mojo</groupId>
			    <artifactId>versions-maven-plugin</artifactId>
			    <version>${maven.maven-versions-plugin.version}</version>
			    
			    <!-- make sure we get the right suggestions from 
			    		mvn versions:display-dependency-updates
			    	 and
			    		mvn versions:display-plugin-updates
			     -->
			    <configuration>
					<ruleSet>
			            <ignoreVersions>
							<!-- Don't depend on snapshots' -->
							<ignoreVersion>
								<type>regex</type>
								<version>(.+-SNAPSHOT|.+-M\d)</version>
							</ignoreVersion>
							<!-- Don't depend on alpha or beta versions' -->
							<ignoreVersion>
								<type>regex</type>
								<version>.+-(alpha|beta).+</version>
							</ignoreVersion>
			            </ignoreVersions>
			    	</ruleSet>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven.maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven.minimal-version}</version>
								</requireMavenVersion>
							</rules>    
						</configuration>
					</execution>
				</executions>
			</plugin>
					        					
			<plugin>
			    <groupId>org.sonatype.central</groupId>
			    <artifactId>central-publishing-maven-plugin</artifactId>
			    <version>${maven.maven-central-publishing-plugin.version}</version>
			    <extensions>true</extensions>
			    <configuration>
					<publishingServerId>central</publishingServerId>
					<deploymentName>eventstore-${project.version}</deploymentName>
			    </configuration>
			</plugin>
      		
			<plugin>
			    <groupId>com.mycila</groupId>
			    <artifactId>license-maven-plugin</artifactId>
			    <version>${maven.mycila-license-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			    <configuration>
					<properties>
						<project.name>Sliceworkz Eventstore</project.name>
						<project.description>a Java/Postgres DCB Eventstore implementation</project.description>
					    <owner>Sliceworkz / XTi</owner>
					    <email>info@sliceworkz.org</email>
					    <year>2025</year>
					</properties>
					<licenseSets>
						<licenseSet>
							<header>com/mycila/maven/plugin/license/templates/LGPL-3.txt</header>
							<includes>
							    <include>**/*.java</include>
							    <include>**/*.sql</include>
							    <include>**/*.xml</include>
							    <include>**/*.properties</include>
							</includes>
							<excludes>
							    <exclude>**/target/**</exclude>
							</excludes>
						</licenseSet>
					</licenseSets>
			    </configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>gpg-ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven.maven-pgp-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>install</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
							<passphrase>${env.GPG_PASSPHRASE}</passphrase>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<licenses>
		<license>
			<name>LGPL License</name>
			<url>https://opensource.org/license/lgpl-3-0</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Günther Van Roey</name>
			<email>gunther.vanroey@xt-i.com</email>
		</developer>
	</developers>
	
	<scm>
		<connection>https://github.com/sliceworkz/eventstore.git</connection>
		<developerConnection>scm:git:git://github.com/sliceworkz/eventstore.git</developerConnection>
		<url>https://github.com/sliceworkz/eventstore</url>
	</scm>
	
</project>
